manifests/kronos-app/db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kronos-postgres
  namespace: kronos
spec:
  serviceName: postgres
  replicas: 2
  selector:
    matchLabels:
      app: kronos-app
      component: db
      environment: development
  template:
    metadata:
      labels:
        app: kronos-app
        component: db
        environment: development
    spec:
      terminationGracePeriodSeconds: 300
      containers:
        - name: postgres
          image: postgres:15-alpine
          args:
            - "-c"
            - "shared_preload_libraries=pg_stat_statements"
            - "-c"
            - "track_activity_query_size=4096"
            - "-c"
            - "pg_stat_statements.track=ALL"
            - "-c"
            - "track_io_timing=on"
          imagePullPolicy: IfNotPresent
          ports:
            - name: postgres
              containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres
            - name: init-script
              mountPath: /docker-entrypoint-initdb.d
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - pg_isready -U app -d kronos
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
        - name: postgres-exporter
          image: prometheuscommunity/postgres-exporter:latest
          ports:
            - containerPort: 9187
              name: metrics
          livenessProbe:
            httpGet:
              path: /metrics
              port: 9187
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /metrics
              port: 9187
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 5
      volumes:
        - name: init-script
          configMap:
            name: postgres-init
  volumeClaimTemplates:
    - metadata:
        name: postgres-storage
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: do-block-storage
        resources:
          requests:
            storage: 20Gi
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Delete
    whenScaled: Delete
