manifests/kronos-app/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kronos-backend-svc
  namespace: kronos
spec:
  selector:
    app: kronos-app
    component: backend
    environment: development
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
