manifests/kronos-app/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kronos-postgres-svc
  namespace: kronos
  labels:
    app: kronos-app
    component: db
    environment: development
spec:
  clusterIP: None
  selector:
    app: kronos-app
    component: db
    environment: development
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: postgres
    - port: 9187
      targetPort: 9187
      protocol: TCP
      name: metrics
  type: ClusterIP
