manifests/kronos-app/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kronos-frontend-svc
  namespace: kronos
spec:
  selector:
    app: kronos-app
    component: frontend
    environment: development
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
